--- a/free-nodes/2025-11-5-free-node-subscribe.htm
+++ b/free-nodes/2025-11-5-free-node-subscribe.htm
@@ -169,44 +169,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>如何配置 Clash 以支持局域网内设备共享代理？</h5></div>
-    <div class="panel-body">
-        启用 Clash 的 HTTP/SOCKS5 本地监听并在局域网设备上设置该代理地址为网关；若使用 TUN 模式需配合路由器或透明代理实现全局共享，注意开启访问控制避免未经授权的外部访问。<hr />    </div>
-</div>
-<div class="panel panel-default">
     <div class="panel-heading"><h5>V2RayN 与 WinXray 哪个更易用？</h5></div>
     <div class="panel-body">
         V2RayN 界面更简洁，功能更稳定，而 WinXray 提供了更现代的界面和自动测速功能。对于初学者来说，V2RayN 上手更快；而追求高级功能的用户可能更喜欢 WinXray。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Shadowrocket 的分流规则如何支持视频加速？</h5></div>
-    <div class="panel-body">
-        通过分流规则，将流媒体域名匹配到高速节点，其他网站走普通节点。这样可以保证视频播放流畅，同时节约带宽资源，提高整体网络效率和体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Trojan-Go 与 Trojan 有何不同？</h5></div>
-    <div class="panel-body">
-        Trojan-Go 是 Trojan 的分支版本，支持多路复用、QUIC、WebSocket 等新特性。它在兼容性和性能上都有显著提升，适合与现代客户端（如 Clash Meta、Sing-box）搭配使用。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>如何防止租用服务器被用作滥发或代理滥用？</h5></div>
-    <div class="panel-body">
-        限制对外端口与协议，使用防火墙与入侵检测（如 fail2ban），监控流量异常并设置告警，定期审计登录行为，及时阻断滥用源并与服务商沟通封禁滥用账户以防引起供应商封禁整台机。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Clash Premium 与普通版本有什么区别？</h5></div>
-    <div class="panel-body">
-        Clash Premium 是增强版，支持更多功能如 TUN 模式、本地 DNS 解析、脚本规则和自定义代理链。它能实现更细致的流量控制和兼容更多协议，适合对网络有高级需求的用户使用。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>VMess 的 TLS 选项何时使用最合适？</h5></div>
-    <div class="panel-body">
-        TLS 可提供加密和伪装，适合在高封锁或不稳定网络环境使用。结合域名伪装和证书，可让流量看起来像普通 HTTPS 请求，提升抗封锁能力和隐蔽性。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Shadowrocket 的节点测速结果如何应用？</h5></div>
-    <div class="panel-body">
-        节点测速结果可用于策略组选择和自动切换，程序会根据延迟和丢包率选择最优节点。这样访问海外网站或流媒体时，可以保持高速和稳定的网络体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Clash 订阅被墙或无法下载如何绕过？</h5></div>
@@ -216,7 +181,42 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Netch 的透明代理适合哪些应用场景？</h5></div>
     <div class="panel-body">
-        透明代理通过 TUN 或 WinDivert 拦截系统 IP 层流量，无需配置每个应用。适合全局科学上网、在线游戏或对局域网设备统一代理的场景。    </div>
+        透明代理通过 TUN 或 WinDivert 拦截系统 IP 层流量，无需配置每个应用。适合全局科学上网、在线游戏或对局域网设备统一代理的场景。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Shadowrocket 的分流规则如何支持视频加速？</h5></div>
+    <div class="panel-body">
+        通过分流规则，将流媒体域名匹配到高速节点，其他网站走普通节点。这样可以保证视频播放流畅，同时节约带宽资源，提高整体网络效率和体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>如何配置 Clash 以支持局域网内设备共享代理？</h5></div>
+    <div class="panel-body">
+        启用 Clash 的 HTTP/SOCKS5 本地监听并在局域网设备上设置该代理地址为网关；若使用 TUN 模式需配合路由器或透明代理实现全局共享，注意开启访问控制避免未经授权的外部访问。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Trojan-Go 与 Trojan 有何不同？</h5></div>
+    <div class="panel-body">
+        Trojan-Go 是 Trojan 的分支版本，支持多路复用、QUIC、WebSocket 等新特性。它在兼容性和性能上都有显著提升，适合与现代客户端（如 Clash Meta、Sing-box）搭配使用。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Clash Premium 与普通版本有什么区别？</h5></div>
+    <div class="panel-body">
+        Clash Premium 是增强版，支持更多功能如 TUN 模式、本地 DNS 解析、脚本规则和自定义代理链。它能实现更细致的流量控制和兼容更多协议，适合对网络有高级需求的用户使用。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>如何防止租用服务器被用作滥发或代理滥用？</h5></div>
+    <div class="panel-body">
+        限制对外端口与协议，使用防火墙与入侵检测（如 fail2ban），监控流量异常并设置告警，定期审计登录行为，及时阻断滥用源并与服务商沟通封禁滥用账户以防引起供应商封禁整台机。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>VMess 的 TLS 选项何时使用最合适？</h5></div>
+    <div class="panel-body">
+        TLS 可提供加密和伪装，适合在高封锁或不稳定网络环境使用。结合域名伪装和证书，可让流量看起来像普通 HTTPS 请求，提升抗封锁能力和隐蔽性。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Shadowrocket 的节点测速结果如何应用？</h5></div>
+    <div class="panel-body">
+        节点测速结果可用于策略组选择和自动切换，程序会根据延迟和丢包率选择最优节点。这样访问海外网站或流媒体时，可以保持高速和稳定的网络体验。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -245,15 +245,15 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-high-speed-nodes.htm" title="免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-22-free-node-subscribe.htm" title="免费Clash SSR - 10月22日19.8M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 10月22日19.8M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-16-node-share-links.htm" title="免费Clash SSR - 10月16日19.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 10月16日19.4M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-free-node-subscribe.htm" title="免费Clash SSR - 10月13日19.7M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 10月13日19.7M/S|免费Shadowrocket节点/V2ray节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-31-free-high-speed-nodes.htm" title="免费Clash SSR - 10月31日21.4M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月31日21.4M/S|免费Shadowrocket节点/Singbox节点/V2ray节点/SSR节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-node-share-links.htm" title="免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-27-free-node-subscribe.htm" title="免费Clash SSR - 10月27日22.1M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点节点订阅分享">免费Clash SSR - 10月27日22.1M/S|免费Clash节点/V2ray节点/SSR节点/Shadowrocket节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-1-free-high-speed-nodes.htm" title="免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享">免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-2-free-v2ray-subscribe.htm" title="免费Clash SSR - 11月2日21.4M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月2日21.4M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-17-free-v2ray.htm" title="免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 10月17日20.8M/S|免费Shadowrocket节点/Clash节点/SSR节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-23-node-share-links.htm" title="免费Clash SSR - 10月23日22.4M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 10月23日22.4M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-9-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月9日20.6M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 11月9日20.6M/S|免费SSR节点/V2ray节点/Clash节点/Singbox节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-free-node-subscribe.htm" title="免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-free-node-subscribe.htm" title="免费Clash SSR - 10月24日21.6M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 10月24日21.6M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-19-free-v2ray-subscribe.htm" title="免费Clash SSR - 10月19日19.2M/S|免费Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月19日19.2M/S|免费Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点节点订阅分享</a></li>
                     </ul>
     </div>
@@ -266,7 +266,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
