--- a/free-nodes/2025-11-7-free-subscribe-node.htm
+++ b/free-nodes/2025-11-7-free-subscribe-node.htm
@@ -172,34 +172,9 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
 <h4>FAQ</h4>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Trojan 的伪装域名如何选择更安全？</h5></div>
-    <div class="panel-body">
-        伪装域名应选择真实可访问的网站，且证书有效。这样 Trojan 流量能伪装成正常 HTTPS 请求，减少被封锁或检测的风险，提高节点安全性和稳定性。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>Clash 节点延迟检测如何帮助分流？</h5></div>
-    <div class="panel-body">
-        Clash 会定期测试节点延迟，并结合策略组自动选择最优节点处理流量。避免访问高延迟或失效节点，提高网页浏览、视频播放和游戏速度及稳定性，优化整体网络体验。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>WinXray 节点健康检测如何提升网络体验？</h5></div>
-    <div class="panel-body">
-        WinXray 会定期检测节点延迟和丢包率，并结合策略组自动切换到最优节点。避免高延迟或失效节点，提高网页浏览、视频播放和游戏连接的稳定性和速度。<hr />    </div>
-</div>
-<div class="panel panel-default">
     <div class="panel-heading"><h5>V2Ray 服务器启动后提示端口被占用，该如何处理？</h5></div>
     <div class="panel-body">
         先用 netstat 或 ss 工具查看占用该端口的进程（例如 `ss -ltnp`），确认是旧进程或其他服务占用。停止占用进程或修改 V2Ray 配置端口，然后重启服务并检查防火墙规则是否开放了新端口。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>SSR 的混淆和协议设置如何选择才能绕过封锁？</h5></div>
-    <div class="panel-body">
-        选择模拟 HTTPS 的混淆方式如 tls1.2_ticket_auth，并搭配 AEAD 或协议插件，可以有效隐藏流量特征，降低被封锁风险。不同网络环境需测试选择最优组合。<hr />    </div>
-</div>
-<div class="panel panel-default">
-    <div class="panel-heading"><h5>SSR 的混淆插件如何提高抗封锁能力？</h5></div>
-    <div class="panel-body">
-        通过混淆插件可以模拟正常 HTTPS 或 HTTP 流量，隐藏真实通信特征。合理选择混淆方式，可有效避免 DPI 检测，提高节点可用性和连接稳定性，保证长期科学上网。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Matsuri 如何通过节点测速选择最优线路？</h5></div>
@@ -207,9 +182,19 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Matsuri 会定期测速节点延迟和丢包率，结合策略组自动选择延迟低、稳定性高的节点。这样可以提升网页、视频和游戏访问速度，减少掉线和卡顿，优化整体体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>PassWall2 如何自动切换最佳节点？</h5></div>
+    <div class="panel-heading"><h5>Sing-box 的分流规则可以按端口分配节点吗？</h5></div>
     <div class="panel-body">
-        通过延迟测速和策略组设置，PassWall2 可自动选择延迟最低的节点处理流量。用户无需手动切换节点，保证网页、视频和游戏流量的速度和稳定性，提高整体网络体验。<hr />    </div>
+        支持。用户可通过端口号匹配流量，将不同应用的流量分配到指定节点，实现精准分流。结合策略组使用，可优化访问速度和网络稳定性。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Clash 节点延迟检测如何帮助分流？</h5></div>
+    <div class="panel-body">
+        Clash 会定期测试节点延迟，并结合策略组自动选择最优节点处理流量。避免访问高延迟或失效节点，提高网页浏览、视频播放和游戏速度及稳定性，优化整体网络体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>SSR 的混淆插件如何提高抗封锁能力？</h5></div>
+    <div class="panel-body">
+        通过混淆插件可以模拟正常 HTTPS 或 HTTP 流量，隐藏真实通信特征。合理选择混淆方式，可有效避免 DPI 检测，提高节点可用性和连接稳定性，保证长期科学上网。<hr />    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h5>Surfboard 策略组如何提升在线视频体验？</h5></div>
@@ -217,9 +202,24 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         Surfboard 可通过策略组将视频流量分配到低延迟、高带宽节点，自动切换到最佳节点，减少缓冲和卡顿，提高在线视频播放的流畅性和整体网络体验。<hr />    </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h5>Sing-box 的分流规则可以按端口分配节点吗？</h5></div>
+    <div class="panel-heading"><h5>WinXray 节点健康检测如何提升网络体验？</h5></div>
     <div class="panel-body">
-        支持。用户可通过端口号匹配流量，将不同应用的流量分配到指定节点，实现精准分流。结合策略组使用，可优化访问速度和网络稳定性。    </div>
+        WinXray 会定期检测节点延迟和丢包率，并结合策略组自动切换到最优节点。避免高延迟或失效节点，提高网页浏览、视频播放和游戏连接的稳定性和速度。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>PassWall2 如何自动切换最佳节点？</h5></div>
+    <div class="panel-body">
+        通过延迟测速和策略组设置，PassWall2 可自动选择延迟最低的节点处理流量。用户无需手动切换节点，保证网页、视频和游戏流量的速度和稳定性，提高整体网络体验。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>SSR 的混淆和协议设置如何选择才能绕过封锁？</h5></div>
+    <div class="panel-body">
+        选择模拟 HTTPS 的混淆方式如 tls1.2_ticket_auth，并搭配 AEAD 或协议插件，可以有效隐藏流量特征，降低被封锁风险。不同网络环境需测试选择最优组合。<hr />    </div>
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading"><h5>Trojan 的伪装域名如何选择更安全？</h5></div>
+    <div class="panel-body">
+        伪装域名应选择真实可访问的网站，且证书有效。这样 Trojan 流量能伪装成正常 HTTPS 请求，减少被封锁或检测的风险，提高节点安全性和稳定性。    </div>
 </div>
 <div class="panel panel-default mt-5">
     <div class="panel-heading">
@@ -248,16 +248,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-4-free-node-subscribe-links.htm" title="免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月4日18.4M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月3日19.3M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 11月3日19.3M/S|免费V2ray节点/Clash节点/Singbox节点/SSR节点/Shadowrocket节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-node-subscribe.htm" title="免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月5日21M/S|免费Singbox节点/SSR节点/Shadowrocket节点/V2ray节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-7-free-subscribe-node.htm" title="免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月7日19.6M/S|免费V2ray节点/Shadowrocket节点/SSR节点/Clash节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-8-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享">免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="免费Clash SSR - 10月25日22.2M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 10月25日22.2M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-23-node-share-links.htm" title="免费Clash SSR - 10月23日22.4M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 10月23日22.4M/S|免费SSR节点/Shadowrocket节点/Singbox节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-20-node-share-links.htm" title="免费Clash SSR - 10月20日22.8M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月20日22.8M/S|免费Clash节点/SSR节点/Singbox节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" title="免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-14-free-v2ray-subscribe.htm" title="免费Clash SSR - 11月14日20.8M/S|免费Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 11月14日20.8M/S|免费Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-11-free-high-speed-nodes.htm" title="免费Clash SSR - 11月11日21.1M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 11月11日21.1M/S|免费SSR节点/Singbox节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-7-free-subscribe-node.htm" title="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-12-node-share-links.htm" title="免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-21-node-share.htm" title="免费Clash SSR - 10月21日22.8M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点订阅分享">免费Clash SSR - 10月21日22.8M/S|免费Clash节点/Shadowrocket节点/V2ray节点/SSR节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-v2ray-subscribe.htm" title="免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-26-free-high-speed-nodes.htm" title="免费Clash SSR - 10月26日18.3M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月26日18.3M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-2-free-v2ray-subscribe.htm" title="免费Clash SSR - 11月2日21.4M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点订阅分享">免费Clash SSR - 11月2日21.4M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Clash节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-node-share-links.htm" title="免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-10-node-share.htm" title="免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -269,7 +269,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
