--- a/free-nodes/page-4.htm
+++ b/free-nodes/page-4.htm
@@ -137,6 +137,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-12">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-12-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/878c9b9c0fb633f5166aa13fce152680.webp" alt="免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-12-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月12日20M/S|免费Singbox节点/Clash节点/Shadowrocket节点/SSR节点/V2ray节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了韩国、欧洲、美国、加拿大、日本、香港、新加坡等地区,最高速度可达20 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-11">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-11-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/6e65073fbec9666d38dbc4b2db7cf40f.webp" alt="免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-11-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了欧洲、加拿大、新加坡、美国、韩国、香港、日本等地区,最高速度可达19 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-10-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/368caffbf1616e5828ab6c4f9c7249bd.webp" alt="免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-10-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了香港、新加坡、日本、韩国、美国、欧洲、加拿大等地区,最高速度可达18.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-09">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-9-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/58ea9c0795c5e014ff8cacb706be34ae.webp" alt="免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-9-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了新加坡、美国、欧洲、日本、香港、加拿大、韩国等地区,最高速度可达20.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/c8e6376117c27d8b3bcf0302b91cbd97.webp" alt="免费Clash SSR - 10月8日23M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-8-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月8日23M/S|免费Clash节点/SSR节点/Singbox节点/V2ray节点/Shadowrocket节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了美国、欧洲、香港、加拿大、日本、新加坡、韩国等地区,最高速度可达23 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240825-1/7f6af7867bc39696f3d2707a3146a366.webp" alt="免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        免费Clash SSR - 10月7日18.5M/S|免费Clash节点/Singbox节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享                                    </h3>
+                                </a>
+                                <p>这一次的节点更新覆盖了香港、韩国、欧洲、加拿大、日本、美国、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-06">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
@@ -203,16 +287,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-11-8-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享">免费Clash SSR - 11月8日22.1M/S|免费SSR节点/Clash节点/V2ray节点/Shadowrocket节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-14-free-v2ray-subscribe.htm" title="免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享">免费Clash SSR - 10月14日21.7M/S|免费Singbox节点/Clash节点/V2ray节点/Shadowrocket节点/SSR节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-11-4-free-v2ray.htm" title="免费Clash SSR - 11月4日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 11月4日18.4M/S|免费V2ray节点/Clash节点/Shadowrocket节点/Singbox节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-18-node-share-links.htm" title="免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享">免费Clash SSR - 10月18日23M/S|免费Clash节点/Shadowrocket节点/V2ray节点/Singbox节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-25-node-share.htm" title="免费Clash SSR - 10月25日22.2M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 10月25日22.2M/S|免费SSR节点/Clash节点/Shadowrocket节点/V2ray节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-6-free-node-subscribe-links.htm" title="免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享">免费Clash SSR - 11月6日22.2M/S|免费SSR节点/Shadowrocket节点/Clash节点/Singbox节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-14-free-v2ray-subscribe.htm" title="免费Clash SSR - 11月14日20.8M/S|免费Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点节点订阅分享">免费Clash SSR - 11月14日20.8M/S|免费Clash节点/Shadowrocket节点/SSR节点/V2ray节点/Singbox节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-24-free-node-subscribe.htm" title="免费Clash SSR - 10月24日21.6M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 10月24日21.6M/S|免费Singbox节点/V2ray节点/Shadowrocket节点/Clash节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-11-5-free-node-subscribe.htm" title="免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 11月5日20.6M/S|免费Singbox节点/Clash节点/SSR节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-19-free-v2ray-subscribe.htm" title="免费Clash SSR - 10月19日19.2M/S|免费Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点节点订阅分享">免费Clash SSR - 10月19日19.2M/S|免费Shadowrocket节点/Clash节点/Singbox节点/SSR节点/V2ray节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-3-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享">免费Clash SSR - 10月3日22.5M/S|免费SSR节点/V2ray节点/Singbox节点/Clash节点/Shadowrocket节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-22-free-node-subscribe.htm" title="免费Clash SSR - 10月22日19.8M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享">免费Clash SSR - 10月22日19.8M/S|免费Shadowrocket节点/Singbox节点/SSR节点/Clash节点/V2ray节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-11-node-share-links.htm" title="免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享">免费Clash SSR - 10月11日19M/S|免费Singbox节点/SSR节点/Clash节点/Shadowrocket节点/V2ray节点节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-11-1-free-high-speed-nodes.htm" title="免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享">免费Clash SSR - 11月1日21.8M/S|免费Clash节点/V2ray节点/Shadowrocket节点/SSR节点/Singbox节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-free-high-speed-nodes.htm" title="免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享">免费Clash SSR - 10月9日20.6M/S|免费Shadowrocket节点/SSR节点/V2ray节点/Singbox节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-26-free-high-speed-nodes.htm" title="免费Clash SSR - 10月26日18.3M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享">免费Clash SSR - 10月26日18.3M/S|免费Shadowrocket节点/V2ray节点/Singbox节点/SSR节点/Clash节点节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-10-node-share.htm" title="免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享">免费Clash SSR - 10月10日18.7M/S|免费V2ray节点/Shadowrocket节点/Singbox节点/Clash节点/SSR节点节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-free-high-speed-nodes.htm" title="免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享">免费Clash SSR - 10月15日21.1M/S|免费Singbox节点/Shadowrocket节点/SSR节点/V2ray节点/Clash节点节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -224,7 +308,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
